--- a/test.html
+++ b/test.html
@@ -9,5 +9,7 @@
 <h1>Badeggs</h1>
 <p>WE are back</p>
 
+ <object width="400" height="50" data="badeggsonline2loadermochi.swf"></object> 
+  
 </body>
 </html>
