--- a/test.html
+++ b/test.html
@@ -9,7 +9,8 @@
 <h1>Badeggs</h1>
 <p>WE are back</p>
 
- <object width="400" height="50" data="badeggsonline2loadermochi.swf"></object> 
+ <embed width="400" height="50" src="badeggsonline2loadermochi.swf">
+ 
   
 </body>
 </html>
