--- a/test.html
+++ b/test.html
@@ -9,7 +9,7 @@
 <h1>Badeggs</h1>
 <p>WE are back</p>
 
- <embed width="400" height="50" src="badeggsonline2loadermochi.swf">
+ <embed width="100%" height="100%" src="badeggsonline2loadermochi.swf">
  
   
 </body>
