--- a/test.html
+++ b/test.html
@@ -9,7 +9,13 @@
 <h1>Badeggs</h1>
 <p>WE are back</p>
 
- <embed width="100%" height="100%" src="badeggsonline2loadermochi.swf">
+ 
+<object classid="clsid:D27CDB6E-AE6D-11cf-96B8-444553540000" codebase="http://fpdownload.macromedia.com/pub/shockwave/cabs/flash/swflash.cab#version=8,0,0,0" width="100%" height="100%">
+<param name="portal" value="portal.swf" />
+<param name="quality" value="high" />
+<PARAM NAME="SCALE" VALUE="exactfit">
+<embed src="portal.sfw" quality="high" type="application/x-shockwave-flash" width="100%" height="100%" SCALE="exactfit" pluginspage="http://www.macromedia.com/go/getflashplayer" />
+</object>
  
   
 </body>
