--- a/test.html
+++ b/test.html
@@ -10,7 +10,7 @@
 <p>WE are back</p>
 
  
-<embed width="1366" height="768" src="portal.swf">
+<a href="https://ryanhu1234.github.io/testnou/test.html"> Portal</a>
 
  
   
