--- a/landing.html
+++ b/landing.html
@@ -8,7 +8,7 @@
 <h1>Welcome</h1>
 <p>WHat game?</p>
 
-<a href="https://ryanhu1234.github.io/testnou/test.html"> Portal</a>
+<a href="https://ryanhu1234.github.io/testnou/portal.html"> Portal</a>
 
 
 
