--- a/portal.html
+++ b/portal.html
@@ -1,1 +1,8 @@
+<!DOCTYPE html>
+<html>
+
+<head>
+  <title>Portal</title>
+</head>
+  
 <object width="1366" height="768" data="portal.swf"></object>
