--- a/landing.html
+++ b/landing.html
@@ -6,7 +6,7 @@
 <body>
 
 <h1>Welcome</h1>
-<p>WHat game?</p>
+<p>What game?</p>
 
 <a href="https://ryanhu1234.github.io/testnou/portal.html"> Portal</a>
 
