--- a/raftwars2.html
+++ b/raftwars2.html
@@ -6,4 +6,4 @@
   <title>Raft Wars 2</title>
 </head>
   
-<object width="1366" height="768" data="raftwars2.swf"></object>
+<object width="1366" height="768" data="raft-wars-2.swf"></object>
