--- a/landing.html
+++ b/landing.html
@@ -8,8 +8,8 @@
 <h1>Welcome</h1>
 <p>What game?</p>
 
-<a href="https://ryanhu1234.github.io/testnou/portal.html"> Portal</a>
-
+<a href="https://windbergames.github.io/games/portal.html"> Portal</a>
+<a href="htpps://windbergames.github.io/games/raftwars2.html"> Raft Wars 2</a>
 
 
 </body>
