--- a/landing.html
+++ b/landing.html
@@ -9,7 +9,7 @@
 <p>What game?</p>
 
 <p> <a href="https://windbergames.github.io/games/portal.html"> Portal</a> </p>
-<p> <a href="htpps://windbergames.github.io/games/raftwars2.html"> Raft Wars 2</a> </p>
+<p> <a href="windbergames.github.io/games/raftwars2.html"> Raft Wars 2</a> </p>
 
 
 </body>
