--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<iframe src="http://scratch.mit.edu/projects/10158549/https://scratch.mit.edu/projects/embed/10158549/" frameborder="0" allowfullscreen></iframe>
+<iframe src="http://scratch.mit.edu/projects/10158549/https://scratch.mit.edu/projects/embed/10158549/"></iframe>
