--- a/test.html
+++ b/test.html
@@ -1,1 +1,1 @@
-<iframe src="http://scratch.mit.edu/projects/10158549/https://scratch.mit.edu/projects/10158549" width="480px" height="480px" allowFullscreen></iframe>
+<iframe src="https://scratch.mit.edu/projects/10158549" width="480px" height="480px" allowFullscreen></iframe>
