--- a/landing.html
+++ b/landing.html
@@ -11,6 +11,7 @@
 
 <p> <a href="https://windbergames.github.io/games/portal.html"> Portal</a> </p>
 <p> <a href="windbergames.github.io/games/raftwars2.html"> Raft Wars 2</a> </p>
+<p> <a href="windbergames.github.io/games/bad1.html"> Badeggs 1</a> </p>
 
 
 </body>
