--- a/landing.html
+++ b/landing.html
@@ -9,9 +9,9 @@
 <h1>Welcome</h1>
 <p>What game?</p>
 
-<p> <a href="https://windbergames.github.io/games/portal.html"> Portal</a> </p>
-<p> <a href="windbergames.github.io/games/raftwars2.html"> Raft Wars 2</a> </p>
-<p> <a href="windbergames.github.io/games/bad1"> Badeggs 1</a> </p>
+<a href="https://windbergames.github.io/games/portal.html"> Portal</a> 
+<a href="windbergames.github.io/games/raftwars2.html"> Raft Wars 2</a> 
+<a href="windbergames.github.io/games/bad1"> Badeggs 1</a> 
 
 
 </body>
