--- a/landing.html
+++ b/landing.html
@@ -10,8 +10,8 @@
 <p>What game?</p>
 
 <a href="https://windbergames.github.io/games/portal.html"> Portal</a> 
-<a href="windbergames.github.io/games/raftwars2.html"> Raft Wars 2</a> 
-<a href="windbergames.github.io/games/bad1"> Badeggs 1</a> 
+<a href="raftwars2.html"> Raft Wars 2</a> 
+<a href="bad1"> Badeggs 1</a> 
 
 
 </body>
