--- a/landing.html
+++ b/landing.html
@@ -5,7 +5,7 @@
 </head>
 <body>
 <img src="windber logo - VT.jpg" alt="WindberW">
-
+<body style="background-color:#FF0000;">
 <h1>Welcome</h1>
 <p>What game?</p>
 
