--- a/landing.html
+++ b/landing.html
@@ -9,9 +9,9 @@
 <h1>Welcome</h1>
 <p>What game?</p>
 
-<a href="https://windbergames.github.io/games/portal.html"> Portal</a> 
-<a href="raftwars2.html"> Raft Wars 2</a> 
 <a href="bad1"> Badeggs 1</a> 
+<a href="https://discord.gg/nwQv4M5"> Portal</a> 
+
 
 
 </body>
