--- a/landing.html
+++ b/landing.html
@@ -9,8 +9,8 @@
 <h1>Welcome</h1>
 <p>What game?</p>
 
-<a href="bad1"> Badeggs 1</a> 
-<a href="https://discord.gg/nwQv4M5"> Portal</a> 
+  <p <a href="bad1"> Badeggs 1</a> </p>
+  <p <a href="https://discord.gg/nwQv4M5"> Discord</a> </p> 
 
 
 
