--- a/landing.html
+++ b/landing.html
@@ -9,8 +9,8 @@
 <h1>Welcome</h1>
 <p>What game?</p>
 
-  <p <a href="bad1"> Badeggs 1</a> </p>
-  <p <a href="https://discord.gg/nwQv4M5"> Discord</a> </p> 
+<a href="bad1"> Badeggs 1</a> 
+<iframe src="https://discordapp.com/widget?id=538360971727470592&theme=dark" width="350" height="500" allowtransparency="true" frameborder="0"></iframe>  
 
 
 
